Restructure repository to standard ansible_collections layout

--- a/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/minimal_install.yml
+++ b/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/minimal_install.yml
@@ -7,6 +7,6 @@
     - placeholder_namespace.cryptopro_csp_astra
 
   roles:
-    - role: cryptopro_csp
+    - role: placeholder_namespace.cryptopro_csp_astra.cryptopro_csp
       vars:
         cryptopro_csp_tgz_path: /path/to/linux-amd64_deb.tgz
