--- a/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/install_with_license.yml
+++ b/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/install_with_license.yml
@@ -11,7 +11,7 @@
     vault_cryptopro_csp_license_key: "{{ cryptopro_csp_license_key_vault | default('') }}"
 
   roles:
-    - role: cryptopro_csp
+    - role: placeholder_namespace.cryptopro_csp_astra.cryptopro_csp
       vars:
         cryptopro_csp_tgz_path: /path/to/linux-amd64_deb.tgz
         cryptopro_csp_license_apply: true
