--- a/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/install_with_tokens.yml
+++ b/ansible_collections/placeholder_namespace/cryptopro_csp_astra/examples/install_with_tokens.yml
@@ -7,8 +7,8 @@
     - placeholder_namespace.cryptopro_csp_astra
 
   roles:
-    - role: cryptopro_csp
+    - role: placeholder_namespace.cryptopro_csp_astra.cryptopro_csp
       vars:
         cryptopro_csp_tgz_path: /path/to/linux-amd64_deb.tgz
 
-    - role: cryptopro_csp_token
+    - role: placeholder_namespace.cryptopro_csp_astra.cryptopro_csp_token
